Windows start script now also using HB2B vars